Add jaxb dependency
module removed in JDK 11 by JEP-320